latex2mmlc/tests/snapshots/wiki_test__wiki197.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "| \\uparrow \\rangle"
---
<math>
    <mi>|</mi>
    <mo stretchy="false">↑</mo>
    <mo stretchy="false">⟩</mo>
</math>
