latex2mmlc/tests/snapshots/wiki_test__wiki198.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\left| \\uparrow \\right\\rangle"
---
<math>
    <mrow>
        <mo stretchy="true" form="prefix">|</mo>
        <mo stretchy="false">↑</mo>
        <mo stretchy="true" form="postfix">⟩</mo>
    </mrow>
</math>
