latex2mmlc/tests/snapshots/wiki_test__wiki206.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: α π
---
<math>
    <mi>α</mi>
    <mi>π</mi>
</math>
