latex2mmlc/tests/snapshots/wiki_test__wiki209.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\left( \\frac{\\left(3-x\\right) \\times 2}{3-x} \\right)"
---
<math>
    <mrow>
        <mo stretchy="true">(</mo>
        <mfrac>
            <mrow>
                <mrow>
                    <mo stretchy="true">(</mo>
                    <mrow>
                        <mn>3</mn>
                        <mo>−</mo>
                        <mi>x</mi>
                    </mrow>
                    <mo stretchy="true">)</mo>
                </mrow>
                <mo>×</mo>
                <mn>2</mn>
            </mrow>
            <mrow>
                <mn>3</mn>
                <mo>−</mo>
                <mi>x</mi>
            </mrow>
        </mfrac>
        <mo stretchy="true">)</mo>
    </mrow>
</math>
