latex2mmlc/tests/snapshots/wiki_test__wiki210.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\det(\\mathsf{A}-\\lambda\\mathsf{I}) = 0"
---
<math>
    <mi>det</mi>
    <mo stretchy="false">(</mo>
    <mi>𝖠</mi>
    <mo>−</mo>
    <mi>λ</mi>
    <mi>𝖨</mi>
    <mo stretchy="false">)</mo>
    <mo>=</mo>
    <mn>0</mn>
</math>
