latex2mmlc/tests/snapshots/wiki_test__wiki212.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "|\\bar{z}| = |z|, |(\\bar{z})^n| = |z|^n, \\arg(z^n) = n \\arg(z)"
---
<math>
    <mi>|</mi>
    <mover>
        <mi>z</mi>
        <mo accent="true">¯</mo>
    </mover>
    <mi>|</mi>
    <mo>=</mo>
    <mi>|</mi>
    <mi>z</mi>
    <mi>|</mi>
    <mo>,</mo>
    <mi>|</mi>
    <mo stretchy="false">(</mo>
    <mover>
        <mi>z</mi>
        <mo accent="true">¯</mo>
    </mover>
    <msup>
        <mo stretchy="false">)</mo>
        <mi>n</mi>
    </msup>
    <mi>|</mi>
    <mo>=</mo>
    <mi>|</mi>
    <mi>z</mi>
    <msup>
        <mi>|</mi>
        <mi>n</mi>
    </msup>
    <mo>,</mo>
    <mi>arg</mi>
    <mo stretchy="false">(</mo>
    <msup>
        <mi>z</mi>
        <mi>n</mi>
    </msup>
    <mo stretchy="false">)</mo>
    <mo>=</mo>
    <mi>n</mi>
    <mi>arg</mi>
    <mo stretchy="false">(</mo>
    <mi>z</mi>
    <mo stretchy="false">)</mo>
</math>
